--- a/apps/comments-feed/tsconfig.json
+++ b/apps/comments-feed/tsconfig.json
@@ -19,6 +19,7 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
+    "noImplicitAny": false,
     "noFallthroughCasesInSwitch": true
   },
   "angularCompilerOptions": {
